--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
+    "dotenv": "^17.0.0",
     "moment": "^2.30.1",
+    "nodemon": "^3.1.10",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hooks-global-state": "^2.1.0",
@@ -32,6 +34,8 @@
     "@nomicfoundation/hardhat-toolbox": "^6.0.0",
     "@nomicfoundation/hardhat-verify": "^2.0.14",
     "@nomicfoundation/ignition-core": "^0.15.12",
+    "@nomiclabs/hardhat-ethers": "^2.2.3",
+    "@nomiclabs/hardhat-waffle": "^2.0.6",
     "@typechain/ethers-v6": "^0.5.1",
     "@typechain/hardhat": "^9.1.0",
     "@types/chai": "^4.3.20",
@@ -43,7 +47,8 @@
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
-    "ethers": "^6.14.4",
+    "ethereum-waffle": "^4.0.10",
+    "ethers": "^5.8.0",
     "globals": "^16.0.0",
     "hardhat": "^2.25.0",
     "hardhat-gas-reporter": "^2.3.0",
