--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
+    "buffer": "^6.0.3",
     "dotenv": "^17.0.0",
     "moment": "^2.30.1",
     "nodemon": "^3.1.10",
+    "process": "^0.11.10",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hooks-global-state": "^2.1.0",
