--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cometchat-pro/chat": "^3.0.13",
     "@tailwindcss/vite": "^4.1.7",
     "buffer": "^6.0.3",
     "dotenv": "^17.0.0",
