--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "buffer": "^6.0.3",
     "dotenv": "^17.0.0",
     "framer-motion": "^12.23.0",
+    "lucide-react": "^0.525.0",
     "moment": "^2.30.1",
     "nodemon": "^3.1.10",
     "process": "^0.11.10",
