--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "buffer": "^6.0.3",
     "dotenv": "^17.0.0",
     "framer-motion": "^12.23.0",
+    "jdenticon": "^3.3.0",
     "lucide-react": "^0.525.0",
     "moment": "^2.30.1",
     "nodemon": "^3.1.10",
@@ -24,7 +25,6 @@
     "react-hooks-global-state": "^2.1.0",
     "react-icon": "^1.0.0",
     "react-icons": "^5.5.0",
-    "react-identicons": "^1.2.5",
     "react-router-dom": "^7.6.3",
     "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.7"
