--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.1.7",
     "buffer": "^6.0.3",
     "dotenv": "^17.0.0",
+    "ethers": "^5.8.0",
     "framer-motion": "^12.23.0",
     "jdenticon": "^3.3.0",
     "lucide-react": "^0.525.0",
