--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "react-hooks-global-state": "^2.1.0",
     "react-icon": "^1.0.0",
     "react-icons": "^5.5.0",
+    "react-jdenticon": "^1.5.0",
     "react-router-dom": "^7.6.3",
     "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.7"
